--- a/src/components/form/FormInput.css
+++ b/src/components/form/FormInput.css
@@ -9,32 +9,29 @@
     
 }
 
+
 .container input {
-    width: 40%;
-    padding: 12px;
-    background-color: #2ea6cb;
-    
-    border-radius: 4px;
+    /* width: 40%; */
+    padding: 7px;
+    /* background-color: #fff;
+    border-radius: 4px; */
    
     
 }
 
 .container button {
     
-    padding: 12px;
-    background-color: #2ea6cb;
-    margin-left: 0;
+    padding: 7px;
+   
    
 }
-@media (max-width :450px) {
-     .container input{
-         padding: 2px;
-         
-         margin: auto;
-     }
+@media (max-width :380px) {
+     
 
      .container button {
-         padding: 2px;
+         display: none;
      }
 }
+
+
 
